[tool.poetry]
name = "core1"
version = "0.1.0"
description = ""
authors = ["Morkand <cpaezpy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
xgboost = "^2.1.2"
lightgbm = "^4.5.0"
optuna = "^4.1.0"
imblearn = "^0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
